--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -3,13 +3,15 @@
 
 Migrating the infrastructure involves the following key tasks:
 
-* xref:Creating_an_Infrastructure_Mapping[Mapping the resources] (clusters, datastores, and networks) of your source environment to your target environment
+* Creating an xref:Creating_an_Infrastructure_Mapping[infrastructure mapping] to map the clusters, datastores, and networks of your source environment to your target environment
 
-* Creating a xref:Creating_and_running_a_migration_plan[migration plan] with optional xref:Automating_pre_and_post_migration_tasks_with_ansible[automated tasks] that run before or after each virtual machine is migrated
+* Creating and running a xref:Creating_and_running_a_migration_plan[migration plan]
 
-You can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress. This option allows you to retry the migration plan immediately or to schedule it in the future.
+[NOTE]
+====
+You can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress and retry the migration in the future.
+====
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
 include::modules/proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
-include::modules/con_Automating_pre_and_post_migration_tasks_with_ansible.adoc[leveloffset=+1]
