--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -8,7 +8,7 @@ image:Infrastructure_mappings_screen.png[]
 
 [NOTE]
 ====
-Red Hat Virtualization only: Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate] the RHV conversion hosts. If the hosts are not authenticated, the mapping will display a xref:Infrastructure_mapping_missing_networks[missing networks error].
+Red Hat Virtualization only: Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate] the RHV conversion hosts. If the hosts are not authenticated, the mapping displays a xref:Infrastructure_mapping_missing_networks[missing networks error].
 ====
 
 . Click menu:Compute[Migration > Infrastructure Mapping].
@@ -21,7 +21,7 @@ Red Hat Virtualization only: Before creating an infrastructure mapping, you must
 +
 [NOTE]
 ====
-A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;), which appears after a few seconds' delay for polling the clusters and refreshing the UI.
+If a target cluster does not contain a conversion host, a warning icon (&#65279;image:warning.png[height=15px]&#65279;) is displayed. The icon appears after a few seconds' delay, caused by polling the clusters and refreshing the UI.
 ====
 
 .. Click *Add Mapping*. You can map additional source clusters.
@@ -30,7 +30,7 @@ A target cluster that does not contain a conversion host displays a warning icon
 . Map the datastores:
 
 .. Select a source cluster from the drop-down list.
-.. Select one or more source datastores and a target datastore.
+.. Select one or more source datastores and a target datastore. (OpenStack Platform only: If the target datastore is missing, see xref:OpenStack_storage_not_detected[Storage not detected].)
 .. Click *Add Mapping*. You can map additional source clusters and datastores.
 .. When you have finished mapping the datastores, click *Next*.
 
@@ -42,7 +42,7 @@ A target cluster that does not contain a conversion host displays a warning icon
 
 . When you have finished mapping your resources, click *Create*.
 
-. If a successful mapping message is displayed, click *Close*. If error messages appear, see xref:Troubleshooting[].
+. If a successful mapping message is displayed, click *Close*. If error messages appear, see xref:Infrastructure_mapping_errors[Infrastructure mapping errors].
 +
 Your infrastructure mapping is displayed in menu:Compute[Migration > Infrastructure Mappings].
 
