--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -23,4 +23,4 @@ An OpenStack Platform conversion host has the following requirements:
 * `/var/logs` (5 GB)
 ====
 
-You are ready to configure the conversion hosts for xref:Configuring_conversion_hosts_for_vddk_transformation[VDDK] or xref:Configuring_conversion_hosts_for_ssh_transformation[SSH] transformation.
+You are ready to configure the conversion hosts for xref:Configuring_conversion_hosts_for_transformation[transformation].
