--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
@@ -1,8 +1,4 @@
 [id="Ansible_conversion_hosts_inventory_file_example"]
-= Ansible conversion hosts inventory file example
-
-Create the `conversion_hosts_inventory.yml` inventory file according to the following example:
-
 [options="nowrap" subs="+quotes,verbatim,+macros"]
 ----
 all:
@@ -34,7 +30,7 @@ all:
     v2v_repo_rpms_url: "http://content.example.com/v2v-nbdkit-rpms"
     v2v_repo_srpms_name: "v2v-nbdkit-src-rpms"
     v2v_repo_srpms_url: "http://content.example.com/v2v-nbdkit-src-rpms"
-    v2v_vddk_package_name: "VMware-vix-disklib-6.5.2-6195444.x86_64.tar.gz"
+    v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
     v2v_vddk_package_url: "http://content.example.com/{{ v2v_vddk_package_name }}"
     manageiq_url: "https://_CloudForms_FQDN_"
     manageiq_username: "_username_"
