--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
@@ -1,7 +1,7 @@
 [id="Ims_rhel_pre-migration_ansible_playbook_example"]
-= IMS RHEL pre-migration Ansible playbook example
+= RHEL pre-migration Ansible playbook example
 
-The link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[`ims.rhel_pre_migration`] role performs the following tasks to configure a target Red Hat Enterprise Linux virtual machine:
+You can create an Ansible playbook to automate tasks on the virtual machines before and after migration and add them to your migration plan. This playbook performs the following tasks to configure a Red Hat Enterprise Linux virtual machine:
 
 * Preserving the static IP address configuration
 * Installing the Red Hat Virtualization guest agent
@@ -23,3 +23,5 @@ This example registers a virtual machine with a Satellite 6 server and enables t
   roles:
     - role: ims.rhel_pre_migration
 ----
+
+For more information, see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[].
