--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -15,25 +15,25 @@ Currently, IMS supports only cold migration. Virtual machines are powered off gr
 
 The Infrastructure Migration Solution has 4 key phases:
 
-. Planning the migration (xref:Planning_the_migration[]):
+. xref:Planning_the_migration[Planning]:
 +
 * Assessing the source and target environments to ensure sufficient resources for migration
 * Formulating strategies to minimize the impact on users
 
-. Preparing for migration (xref:Preparing_the_migration_environment[]):
+. xref:Preparing_the_migration_environment[Preparation]:
 +
 * Configuring the source and target environments
 * Creating and configuring the conversion hosts
 
-. Migrating the infrastructure (xref:Migrating_the_infrastructure[]):
+. xref:Migrating_the_infrastructure[Migration]:
 +
 * Mapping the resources of the source environment to the target environment
 * Creating and running a migration plan
 
-. Verifying the migration:
+. Verification:
 +
-* Ensuring that the completed migration plan was successful
-* Troubleshooting errors (xref:Troubleshooting[])
+* Checking that the migration plan completed successfully
+* xref:Troubleshooting[Troubleshooting], if necessary
 
 include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
