--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Automating_pre_and_post_migration_tasks_with_ansible.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Automating_pre_and_post_migration_tasks_with_ansible.adoc
@@ -14,5 +14,5 @@ To set up the Ansible environment and create a service catalog item:
 
 . Create an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/provisioning_virtual_machines_and_hosts/#create-playbook-service-catalog-item[Ansible service catalog item].
 
-include::ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc[leveloffset=+1]
-include::ref_Ansible_conversion_hosts_inventory_file_example.adoc[leveloffset=+1]
+// include::ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc[leveloffset=+1]
+// include::ref_Ansible_conversion_hosts_inventory_file_example.adoc[leveloffset=+1]
