--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
@@ -32,5 +32,6 @@
 * Minimize the impact on your environment by creating multiple migration plans to control and throttle the migration process.
 
 * Prepare your users for downtime.
-
-* If you are migrating to Red Hat Virtualization, run the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL pre-migration Ansible playbook] to preserve static IP address configuration and to install the RHV guest agent. See xref:Automating_pre_and_post_migration_tasks_with_ansible[] for more information.
+////
+* If you are migrating to Red Hat Virtualization, run the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL pre-migration Ansible playbook] to preserve static IP address configuration and to install the RHV guest agent. See xref:Automating_tasks_with_Ansible[Setting up an Ansible environment for automated tasks].
+////
