update to refelct newer version of RHEL

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -230,6 +230,7 @@ Add a customization template to provide *Kickstart*, *Cloud-Init*, or *Sysprep* 
 [example]
 .RHEL ISO with the following modifications:
 ====
+* RHEL 7.5 and above
 * `isolinux.cfg` &ndash; add *ks=cdrom* to the *append* line
 * `ks.cfg` &ndash; which must minimally include:
 
@@ -240,7 +241,7 @@ Add a customization template to provide *Kickstart*, *Cloud-Init*, or *Sysprep* 
 # Mount the floppy drive
 modprobe floppy
 mkdir /tmp/floppy
-mount /dev/floppy /tmp/floppy
+mount /dev/fd0 /tmp/floppy
 %end
 
 # Include ks.cfg file from the floppy (written by CFME based on selected customization template)
