--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -24,23 +24,32 @@ You are ready to configure the conversion hosts.
 .VDDK and SSH: Configuring the conversion hosts for transformation
 
 Perform the following steps on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform):
++
+. Go to +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/+.
 
-. Create an Ansible inventory file, +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml+, according to the following example:
+. Create an Ansible inventory file, `conversion_hosts_inventory.yml`, according to the following example:
 +
 include::ref_Ansible_conversion_hosts_inventory_file_example.adoc[]
+
+. Encrypt the inventory file with Ansible-vault:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ansible-vault encrypt conversion_hosts_inventory.yml
+----
 
 . Run the `conversion_host_enable` Ansible playbook to configure the conversion hosts:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# ansible-playbook -i conversion_hosts_inventory.yml conversion_host_enable.yml
+# ansible-playbook --ask-vault-pass -i conversion_hosts_inventory.yml conversion_host_enable.yml
 ----
 
 . Run the `conversion_host_check` Ansible playbook to verify that the conversion hosts are configured correctly:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# ansible-playbook -i conversion_hosts_inventory.yml conversion_host_check.yml
+# ansible-playbook --ask-vault-pass -i conversion_hosts_inventory.yml conversion_host_check.yml
 ----
 
 If you are configuring the conversion hosts for VDDK transformation, you are ready to xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
