Consolidated conversion host transformation sections

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -19,13 +19,11 @@ You can configure your conversion hosts for VDDK or SSH transformation. Configur
 
 . Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine (for Red Hat Virtualization) or to each conversion host (for OpenStack Platform)
 
-You are ready to configure the conversion hosts.
+You are ready to configure the conversion hosts for transformation.
 
 .VDDK and SSH: Configuring the conversion hosts for transformation
 
-Perform the following steps on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform):
-+
-. Go to +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/+.
+. Go to +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks+ on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform).
 
 . Create an Ansible inventory file, `conversion_hosts_inventory.yml`, according to the following example:
 +
