moved passwords to encrypted file

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -4,7 +4,7 @@
 Preparing the environment for migration involves the following key steps:
 
 * Preparing the xref:Preparing_the_vmware_source_environment[source environment]
-* Preparing the target (xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[Red Hat OpenStack Platform]) environment
+* Preparing the target environment: xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[Red Hat OpenStack Platform]
 * Creating and configuring the xref:Conversion_hosts[conversion hosts]
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
