--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
@@ -30,11 +30,9 @@ all:
     v2v_repo_rpms_url: "http://content.example.com/v2v-nbdkit-rpms"
     v2v_repo_srpms_name: "v2v-nbdkit-src-rpms"
     v2v_repo_srpms_url: "http://content.example.com/v2v-nbdkit-src-rpms"
-    v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
+    v2v_vddk_package_name: "_VMware-vix-disklib-6.5.2-6195444.x86_64.tar.gz_"
     v2v_vddk_package_url: "http://content.example.com/{{ v2v_vddk_package_name }}"
     manageiq_url: "https://_CloudForms_FQDN_"
-    manageiq_username: "_username_"
-    manageiq_password: "_password_"
     manageiq_zone_id: "_42000000000001_"
     manageiq_providers:
       - name: "_RHV_"
@@ -58,4 +56,7 @@ all:
                 -----BEGIN TRUSTED CERTIFICATE-----
                 MIIDlzCCAn+gAwIBAgIJAOP7AaT7dsLYMA0GCSqGSIb3DQEBCwUAMG....
                 -----END TRUSTED CERTIFICATE-----
+
+  vars_files:
+    - password.txt
 ----
