--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -3,18 +3,18 @@
 
 If you are migrating to Red Hat Virtualization:
 
-. Select one or more existing hosts to use as conversion hosts.
+. Select one or more existing hosts (on physical machines, not virtual machines) to use as conversion hosts.
 . Ensure that the conversion hosts have names that clearly identify them as conversion hosts.
 
 If you are migrating to OpenStack Platform:
 
 . Download the OpenStack Platform conversion appliance from _TBD_.
 . Upload the appliance to Glance storage.
-. Deploy the conversion appliance as a conversion host instance for as many hosts as you require, with names that clearly identify them as conversion hosts.
+. Deploy the appliance as a conversion host instance for as many hosts as you require, with names that clearly identify them as conversion hosts.
 +
 [NOTE]
 ====
-An OpenStack Platform conversion host has the following requirements:
+An OpenStack Platform conversion host has the following resource requirements:
 
 * 4 vCPUs
 * 8 GB RAM
