comments from Fabien

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -17,7 +17,7 @@ You can configure your conversion hosts for VDDK or SSH transformation. Configur
 
 . Download the SDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
 
-. Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine (for Red Hat Virtualization) or to each conversion host (for OpenStack Platform)
+. Copy the VDDK package to a machine where it will be accessible over the web, for example, `/var/www/html` on the Red Hat Virtualization Manager machine.
 
 You are ready to configure the conversion hosts for transformation.
 
