--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -1,26 +1,19 @@
 [id="Creating_conversion_hosts"]
 = Creating conversion hosts
 
-If you are migrating to Red Hat Virtualization:
-
-. Select one or more existing hosts (on physical machines, not virtual machines) to use as conversion hosts.
-. Ensure that the conversion hosts have names that clearly identify them as conversion hosts.
+If you are migrating to Red Hat Virtualization, select one or more existing hosts (on physical machines, not virtual machines) to use as conversion hosts.
 
 If you are migrating to OpenStack Platform:
 
 . Download the OpenStack Platform conversion appliance from _TBD_.
 . Upload the appliance to Glance storage.
-. Deploy the appliance as a conversion host instance for as many hosts as you require, with names that clearly identify them as conversion hosts.
-+
-[NOTE]
-====
-An OpenStack Platform conversion host has the following resource requirements:
+. Deploy the appliance as a conversion host instance, with the following resources:
 
 * 4 vCPUs
 * 8 GB RAM
 * `/tmp` (1 GB for each conversion)
 * `/var/tmp` (1 GB for each conversion)
 * `/var/logs` (5 GB)
-====
+
 
 You are ready to configure the conversion hosts for xref:Configuring_conversion_hosts_for_transformation[transformation].
