--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -9,13 +9,13 @@ To prepare the Red Hat OpenStack Platform environment for migration:
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 10 or later.
 
-. Create a link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider network] for the target instances to ensure that the IP addresses of the source virtual machines are preserved.
+. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the target instances to ensure that the IP addresses of the source virtual machines are preserved.
 
 . Create a project for the conversion hosts and whatever projects you require for the target instances.
 
 .   link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[Set at least one `volume type`] for the target block storage. Otherwise, CloudForms will not detect the storage during infrastructure mapping.
 
-. Ensure that the user configured in CloudForms for the OpenStack Platform provider has `administrator` privileges on the target projects.
+. Ensure that the user configured in CloudForms for the OpenStack Platform provider has `admin` privileges on the target projects.
 
 . Configure security groups:
 * A security group for the conversion hosts and CloudForms must have port 22 (SSH) enabled.
