--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
@@ -26,12 +26,8 @@ all:
           b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAA...
           -----END RSA PRIVATE KEY-----
   vars:
-    v2v_repo_rpms_name: "v2v-nbdkit-rpms"
-    v2v_repo_rpms_url: "http://content.example.com/v2v-nbdkit-rpms"
-    v2v_repo_srpms_name: "v2v-nbdkit-src-rpms"
-    v2v_repo_srpms_url: "http://content.example.com/v2v-nbdkit-src-rpms"
     v2v_vddk_package_name: "_VMware-vix-disklib-6.5.2-6195444.x86_64.tar.gz_"
-    v2v_vddk_package_url: "http://content.example.com/{{ v2v_vddk_package_name }}"
+    v2v_vddk_package_url: "http://_path_/_to_/_downloaded_vddk_package_/{{ v2v_vddk_package_name }}"
     manageiq_url: "https://_CloudForms_FQDN_"
     manageiq_zone_id: "_42000000000001_"
     manageiq_providers:
