--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
@@ -16,11 +16,11 @@ Source virtual machines must be powered on for migration.
 
 . If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
 
-. Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with the conversion hosts. (A conversion host is an OpenStack Platform instance with `virt-v2v`, `virt-v2v-wrapper`, and `nbdkit` installed.)
+. Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
 
 . The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, and streams the disks to be converted to the target block storage, using `virt-v2v`. The conversion host creates volumes in the block storage, attaches them to itself, and converts the source disks.
 
-. The conversion host detaches the volumes from itself and CloudForms instructs `virt-v2v-wrapper` to create a target instance in the OpenStack Platform environment with `virt-v2v`. The target instance uses the source virtual machine’s metadata to map to a flavor, a predefined security group, and defined network(s), based on the infrastructure mapping and migration plan settings.
+. Once the disks are converted, `virt-v2v` detaches the volumes from the conversion host. `virt-v2v-wrapper` creates the target instance in the OpenStack Platform environment with the converted disks, using the flavor and security group defined in the migration plan and the network(s) defined in the infrastructure mapping.
 
 . The disks mapped in the block storage are attached to the instance and the instance is powered on.
 +
