--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -16,12 +16,7 @@ image:vmware_to_rhv_migration_workflow.png[]
 . The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain, using `virt-v2v`, and converts them.
 
 . The virtual machine is created in the Red Hat Virtualization environment. The target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
-+
-[NOTE]
-====
-Depending on the source virtual machine’s power state before migration, the virtual machine is either left powered off or is powered on after migration to Red Hat Virtualization.
-====
 
-. The converted disks are attached to the target virtual machine.
+. The converted disks are attached to the target virtual machine. The virtual machine is either left powered off or is powered on after migration, depending on its pre-migration power state.
 +
 The migration process is complete and the migration plan's status is displayed in CloudForms.
