Updated RHV conversion hosts configuration

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -9,15 +9,15 @@ You can configure your conversion hosts for VDDK or SSH transformation. Configur
 . Validating the transformation configuration
 . SSH only: Configuring and validating the SSH connection
 
-.VDDK only: Downloading and copying the VDDK package
+.VDDK only: Downloading and copying VDDK
 
 . Go to link:https://www.vmware.com/support/pubs/[VMware Documentation], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
 
 . Click `Latest Releases` and select the latest VDDK release.
 
-. Download the SDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
+. Download the VDDK package (for example, `VMware-vix-disklib-_version_.x86_64.tar.gz`).
 
-. Copy the VDDK package to a machine where it will be accessible over the web, for example, `/var/www/html` on the Red Hat Virtualization Manager machine.
+. Copy the VDDK package to a location that is accessible over `HTTP`, for example, `/var/www/html` on the Red Hat Virtualization Manager machine.
 
 You are ready to configure the conversion hosts for transformation.
 
