--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
@@ -1,4 +1,24 @@
 [id="Enabling_conversion_hosts_in_cloudforms"]
-= Enabling conversion hosts in CloudForms
+= Enabling the conversion hosts in CloudForms
 
-TBD. Waiting for interface.
+You can enable the xref:Enabling_rhv_conversion_hosts_in_cloudforms[Red Hat Virtualization] or xref:Enabling_osp_conversion_hosts_in_cloudforms[OpenStack Platform] conversion hosts in CloudForms.
+
+[[Enabling_rhv_conversion_hosts_in_cloudforms]]
+.Enabling Red Hat Virtualization conversion hosts
+
+. Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
+. Click the `Policy` drop-down button and select `Edit Tags`.
+. Select `V2V - Transformation Host` from the `tag` drop-down list and `t` as the `assigned value`.
+. Select `V2V - Transformation Method` from the `tag` drop-down list and either `VDDK` or `SSH` as the `assigned value`.
+. Click `Save`.
+. Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
+. In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
+. Click `Validate`. If a success message is displayed, click `Save`.
+
+.Red Hat Virtualization Conversion Host Properties
+image:Conversion_host_properties.png[]
+
+[[Enabling_osp_conversion_hosts_in_cloudforms]]
+.Enabling OpenStack Platform conversion hosts
+
+TBD
