encrypted disk, inventory file update

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -12,6 +12,8 @@ The network configuration must not be changed in any way during the migration. I
 
 . Unmount ISO images from the source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
 
+. Check that the source virtual machines do not have encrypted disks.
+
 . If you are migrating to Red Hat Virtualization:
 
 * Check that source virtual machine names do not duplicate virtual machine names in the target environment. A name conflict will cause the migration to fail.
