--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
@@ -10,50 +10,47 @@ all:
       v2v_transport_methods:
         - vddk
         - ssh
+      v2v_max_concurrent_conversions: 20
       manageiq_provider_name: _RHV_
     chost2.example.com:
       v2v_host_type: openstack
       v2v_transport_methods:
         - vddk
       manageiq_provider_name: _OpenStack_
-  children:
-    vmware_hosts:
-      hosts:
-        _esx1.example.com_:
-        _esx2.example.com_:
-      vars:
-        conversion_ssh_private_key: |
-          -----BEGIN RSA PRIVATE KEY-----
-          b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAA...
-          -----END RSA PRIVATE KEY-----
   vars:
-    v2v_vddk_package_name: "_VMware-vix-disklib-6.5.2-6195444.x86_64.tar.gz_"
-    v2v_vddk_package_url: "http://_path_/_to_/_downloaded_vddk_package_/{{ v2v_vddk_package_name }}"
+    v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
+    v2v_vddk_package_url: "http://_path/to/downloaded_vddk_package_//{{ v2v_vddk_package_name }}"
     manageiq_url: "https://_CloudForms_FQDN_"
     manageiq_zone_id: "_42000000000001_"
     manageiq_providers:
       - name: "_RHV_"
+        hostname: "_rhvm.example.com_"
         connection_configurations:
           - endpoint:
               role: "default"
               verify_ssl: true
               certificate_authority: |
                 -----BEGIN CERTIFICATE-----
-                MIIDoDCCAoigAwIBAgIBATANBgkqhkiG9w0BAQsFADA9MRswGQYDVQ....
+                MIIDoDCCAoigAwIBAgIBATANBgkqhkiG9w0BAQsFADA9MRswGQYDVQQKDBJWMlYu
                 -----END CERTIFICATE-----
       - name: "_OpenStack_"
+        hostname: "_openstack.example.com_"
         connection_configurations:
           - endpoint:
               role: "default"
               security_protocol: "ssl"
               certificate_authority: |
                 -----BEGIN TRUSTED CERTIFICATE-----
-                MIIDNzCCAh8CAQEwDQYJKoZIhvcNAQELBQAwYjELMAkGA1UEBhMCVV....
+                MIIDNzCCAh8CAQEwDQYJKoZIhvcNAQELBQAwYjELMAkGA1UEBhMCVVMxCzAJBgNV
                 -----END TRUSTED CERTIFICATE-----
                 -----BEGIN TRUSTED CERTIFICATE-----
-                MIIDlzCCAn+gAwIBAgIJAOP7AaT7dsLYMA0GCSqGSIb3DQEBCwUAMG....
+                MIIDlzCCAn+gAwIBAgIJAOP7AaT7dsLYMA0GCSqGSIb3DQEBCwUAMGIxCzAJBgNV
                 -----END TRUSTED CERTIFICATE-----
-
-  vars_files:
-    - password.txt
+    vmware_hosts:
+      - name: _esx1.example.com_
+        conversion_ssh_username: _esx_user_
+        conversion_ssh_private_key: |
+          -----BEGIN RSA PRIVATE KEY-----
+          b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAAAAdzc2gtcn
+          -----END RSA PRIVATE KEY-----
 ----
