--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -47,16 +47,28 @@ manageiq_username: "_username_"
 manageiq_password: "_password_"
 ----
 
-. Create an Ansible inventory file, `conversion_hosts_inventory.yml`, according to the following example:
+. VDDK only:
+
+.. Create an Ansible inventory file, `conversion_hosts_inventory.yml`, according to the following example:
 +
 include::ref_Ansible_conversion_hosts_inventory_file_example.adoc[]
 
-. Run the `conversion_host_enable` Ansible playbook to configure the conversion hosts:
+.. Run the `conversion_host_enable` Ansible playbook to configure the conversion hosts:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # ansible-playbook --ask-vault-pass -i conversion_hosts_inventory.yml conversion_host_enable.yml
 ----
+
+. SSH only:
+
+.. Create ssh_key.yml
+[options="nowrap" subs="+quotes,verbatim"]
+----
+---
+
+----:
++
 
 . Run the `conversion_host_check` Ansible playbook to verify that the conversion hosts are configured correctly:
 +
