--- a/doc-High_Availability_Guide/topics/Installation.adoc
+++ b/doc-High_Availability_Guide/topics/Installation.adoc
@@ -13,7 +13,7 @@ The primary database-only appliance functions as an external database to the {pr
 . From your host environment, open the appliance and configure the network:
 .. Log in to the appliance and run the `appliance_console` command to access the appliance console menu. 
 .. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
-. Re-synchronize time information across the appliances:
+. Resynchronize time information across the appliances:
 +
 ------
 # systemctl enable chronyd.service
