remove sections on provisioning hosts

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
@@ -1,4 +1,4 @@
-= Provisioning Virtual Machines and Hosts
+= Provisioning Virtual Machines and Instances
 :imagesdir: images
 :vernum: 4.7-Beta
 :toc: left
